# Mingk42_movie_agg

./: README.md  pyproject.toml
src/movie_agg/: utils.py
